<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="simplegamer003.bakingapp.bakedish.DishStepDetailFragment"
    android:id="@+id/dish_detail_fragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/player_scroll_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/player_linear_layout"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/thumbnail_image"
                android:visibility="gone"
                android:layout_marginBottom="30sp"/>

            <com.google.android.exoplayer2.ui.SimpleExoPlayerView
                android:id="@+id/step_video_player"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_weight="1"
                android:background="#000000"/>

            <TextView
                android:id="@+id/step_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="30sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/check_conn_btn_frag"
                android:text="Retry"
                android:elevation="10dp"
                android:background="@color/colorPrimaryDark"
                android:textColor="#FFFFFF"/>

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/prev_next_layout">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Prev"
            android:id="@+id/prev"
            android:background="?android:attr/selectableItemBackground"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:text="Next"
            android:id="@+id/next"
            android:background="?android:attr/selectableItemBackground"/>

    </RelativeLayout>

</LinearLayout>